Lista3.1/Exercicio1/compiling_error.txt
In file included from /Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintreeMain.c:1:
In file included from /Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:3:
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.h:17:2: error: expected ';' after struct
}
 ^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.h:36:1: error: unknown type name 'List'
List *preOrderTraversalBT(bintree *bt)
^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.h:36:39: error: expected ';' after top level declarator
List *preOrderTraversalBT(bintree *bt)
                                      ^
                                      ;
In file included from /Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintreeMain.c:1:
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:6:10: error: redefinition of 'createBT' as different kind of symbol
bintree *createBT(Info *info){
         ^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.h:20:10: note: previous definition is here
bintree *createBT(Info *info);
         ^
In file included from /Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintreeMain.c:1:
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:56:8: warning: implicit declaration of function 'right' is invalid in C99 [-Wimplicit-function-declaration]
    if(right(bt)) destroyBT(rightBT(bt));
       ^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:69:1: error: unknown type name 'List'
List *preOrderTraversalBT(bintree *bt)
^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:69:39: error: expected ';' after top level declarator
List *preOrderTraversalBT(bintree *bt)
                                      ^
                                      ;
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:84:20: error: unexpected type name 'createBT': expected expression
    bintree *bt1 = createBT(info);
                   ^
/Users/onatalia86/Documents/ED1/Lista3.1/Exercicio1/bintree.c:90:20: error: unexpected type name 'createBT': expected expression
    bintree *bt1 = createBT(info);
                   ^
1 warning and 8 errors generated.
